# Bales

./: .gitignore  .gitmodules  Cargo.toml  README.md  merged_output.txt
.github/workflows/: linux.yml  windows.yml
src/: lib.rs  main.rs
src/archive/: bales_compress.rs  bales_decompress.rs  mod.rs  tar.rs  url_decompress.rs  utils.rs  zip.rs
src/archive/compression/: mod.rs  tar.rs  zip.rs
src/args/: handler.rs  mod.rs
src/cli/: handler.rs  mod.rs
src/error/: bales_error.rs  mod.rs
src/update/: mod.rs  updater.rs
test/src/: lib.rs
test/src/archive/: mod.rs  tar.rs  zip.rs
test/src/args/: handler.rs  mod.rs
test/src/error/: bales_error.rs
