[package]
name = "bales"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.17", features = ["derive"] }
ewsc = { version = "0.1.0", path = "../EWSC", default-features = false }
flate2 = "1.0.28"
indicatif = "0.17.7"
owo-colors = "4.0.0"
strum = "0.25.0"
strum_macros = "0.25.3"
tar = "0.4.40"
term_size = "0.3.2"
thiserror = "1.0.56"
walkdir = "2.4.0"
zip = "0.6.6"


