[package]
name = "bales"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.17", features = ["derive"] }
ewsc = { version = "0.1.0", path = "./ewsc", default-features = false }
flate2 = "1.0.28"
indicatif = "0.17.7"
owo-colors = "4.0.0"
serde = { version = "1.0.195", features = ["derive"] }
strum = "0.25.0"
strum_macros = "0.25.3"
tar = "0.4.40"
tempfile = "3.9.0"
term_size = "0.3.2"
thiserror = "1.0.56"
toml = "0.8.8"
ureq = "2.9.1"
url = "2.5.0"
version-compare = "0.1.1"
walkdir = "2.4.0"
zip = "0.6.6"
zip-extract = "0.1.2"


